Modifying benchmark script to support compressing object headers, specifying which garbage collector to use and specifying the number of times to run the entire benchmark